--- a/php_app_nodes.yaml
+++ b/php_app_nodes.yaml
@@ -1,7 +1,7 @@
 heat_template_version: 2013-05-23
 
 description: |
-  Heat template to deploy a single server running a PHP app under apache
+  A heat template to deploy a PHP application under Apache
 
 parameters:
 
@@ -9,45 +9,16 @@ parameters:
     description: Server Name
     type: string
     default: php
-    constraints:
-    - length:
-        min: 1
-        max: 64
-    - allowed_pattern: "^[a-zA-Z][a-zA-Z0-9-]*$"
-      description: |
-        Must begin with a letter and contain only alphanumeric characters.
 
   image:
     description: Server Image
     type: string
     default: Ubuntu 12.04 LTS (Precise Pangolin)
-    constraints:
-    - allowed_values:
-      - Ubuntu 12.04 LTS (Precise Pangolin)
-      description: Must be a supported operating system.
 
   flavor:
     description: Rackspace Cloud Server flavor
     type: string
     default: 4 GB Performance
-    constraints:
-    - allowed_values:
-      - 1 GB Performance
-      - 2 GB Performance
-      - 4 GB Performance
-      - 8 GB Performance
-      - 15 GB Performance
-      - 30 GB Performance
-      - 512MB Standard Instance
-      - 1GB Standard Instance
-      - 2GB Standard Instance
-      - 4GB Standard Instance
-      - 8GB Standard Instance
-      - 15GB Standard Instance
-      - 30GB Standard Instance
-      description: |
-        Must be a valid Rackspace Cloud Server flavor for the region you have
-        selected to deploy into.
 
   ssh_keypair_name:
     description: Nova keypair name for ssh access to the server
@@ -109,6 +80,10 @@ parameters:
     type: string
     default: false
 
+  ssh_private_key:
+    description: Private key so OS::Heat::Chef can access the server
+    type: string
+
   http_port:
     description: HTTP Port
     type: string
@@ -124,31 +99,11 @@ parameters:
     type: number
     default: 128
 
+  ssh_keypair_name:
+    description: keypair name
+    type: string
+
 resources:
-
-  ssh_key:
-    type: "OS::Nova::KeyPair"
-    properties:
-      name: { get_param: ssh_keypair_name }
-      save_private_key: true
-
-  mysql_root_password:
-    type: "OS::Heat::RandomString"
-    properties:
-      length: 32
-      sequence: lettersdigits
-
-  mysql_debian_password:
-    type: "OS::Heat::RandomString"
-    properties:
-      length: 32
-      sequence: lettersdigits
-
-  mysql_repl_password:
-    type: "OS::Heat::RandomString"
-    properties:
-      length: 32
-      sequence: lettersdigits
 
   php_server:
     type: "Rackspace::Cloud::Server"
@@ -156,13 +111,13 @@ resources:
       name: { get_param: server_hostname }
       flavor: { get_param: flavor }
       image: { get_param: image }
-      key_name: { get_resource: ssh_key }
+      key_name: { get_param: ssh_keypair_name }
 
   bootstrap_server:
     type: "OS::Heat::ChefSolo"
     properties:
       username: root
-      private_key: { get_attr: [ssh_key, private_key] }
+      private_key: { get_param: ssh_private_key }
       host: { get_attr: [php_server, accessIPv4] }
       Berksfile: |
         site :opscode
@@ -178,7 +133,7 @@ resources:
     DependsOn: bootstrap_server
     properties:
       username: root
-      private_key: { get_attr: [ssh_key, private_key] }
+      private_key: { get_param: ssh_private_key }
       host: { get_attr: [php_server, accessIPv4] }
       Berksfile: |
         site :opscode
@@ -208,11 +163,6 @@ resources:
           :git => 'https://github.com/JasonBoyles/rax_php_app.git'
 
       node:
-        mysql:
-          server_root_password: { get_attr: [mysql_root_password, value] }
-          server_debian_password: { get_attr: [mysql_debian_password, value] }
-          server_repl_password: { get_attr: [mysql_repl_password, value] }
-          bind_address: 127.0.0.1
         php_app:
           destination: { get_param: destination }
           deploy_key: { get_param: deploy_key }
@@ -231,22 +181,4 @@ resources:
             backend_host: 127.0.0.1
         run_list: ["recipe[memcached]",
                    "recipe[rax_php_app]",
-                   "recipe[php-ioncube]",
-                   "recipe[mysql::server]"]
-
-
-outputs:
-  private_key:
-    value: { get_attr: [ssh_key, private_key] }
-
-  server_ip:
-    value: { get_attr: [php_server, accessIPv4] }
-
-  mysql_root_password:
-    value: { get_attr: [mysql_root_password, value] }
-
-  mysql_debian_password:
-    value: { get_attr: [mysql_debian_password, value] }
-
-  mysql_repl_password:
-    value: { get_attr: [mysql_repl_password, value] }
+                   "recipe[php-ioncube]"]
