--- a/php_app_multi.yaml
+++ b/php_app_multi.yaml
@@ -124,6 +124,17 @@ parameters:
     type: number
     default: 128
 
+  node_count:
+    description: Number of web servers to deploy
+    type: number
+    default: 1
+    constraints:
+    - range:
+        min: 1
+        max: 25
+      description: Must be between 1 and 25 servers.
+
+
 resources:
 
   ssh_key:
@@ -150,70 +161,13 @@ resources:
       length: 32
       sequence: lettersdigits
 
-  php_server:
-    type: "Rackspace::Cloud::Server"
+  php_nodes:
+    type: "OS::Heat::ResourceGroup"
     properties:
-      name: { get_param: server_hostname }
-      flavor: { get_param: flavor }
-      image: { get_param: image }
-      key_name: { get_resource: ssh_key }
-
-  bootstrap_server:
-    type: "OS::Heat::ChefSolo"
-    properties:
-      username: root
-      private_key: { get_attr: [ssh_key, private_key] }
-      host: { get_attr: [php_server, accessIPv4] }
-      Berksfile: |
-        site :opscode
-
-        cookbook 'apt'
-        cookbook 'build-essential'
-      node:
-        run_list: ["recipe[apt]",
-                   "recipe[build-essential]"]
-
-  php_setup:
-    type: "OS::Heat::ChefSolo"
-    DependsOn: bootstrap_server
-    properties:
-      username: root
-      private_key: { get_attr: [ssh_key, private_key] }
-      host: { get_attr: [php_server, accessIPv4] }
-      Berksfile: |
-        site :opscode
-
-        cookbook 'build-essential'
-        cookbook 'apt'
-        cookbook 'chef-client'
-        cookbook 'apache2'
-        cookbook 'mysql'
-        cookbook 'application',
-          :git => 'https://github.com/opscode-cookbooks/application.git'
-        cookbook 'application_php',
-          :git => 'https://github.com/opscode-cookbooks/application_php.git'
-        cookbook 'php'
-        cookbook 'firewall',
-          :git => 'https://github.com/opscode-cookbooks/firewall.git',
-          :ref => 'c9473bcb3d666dc053979852042cef75236978fe'
-        cookbook 'php_app',
-          :git => 'https://github.com/JasonBoyles/php_app.git'
-        cookbook 'memcached'
-        cookbook 'ssh_known_hosts'
-        cookbook 'varnish'
-        cookbook 'php-ioncube',
-          :git => 'https://github.com/werdan/php-ioncube.git',
-          :ref => 'b663cb2a5fdcdc38564195603dc4c082517dc155'
-        cookbook 'rax_php_app',
-          :git => 'https://github.com/JasonBoyles/rax_php_app.git'
-
-      node:
-        mysql:
-          server_root_password: { get_attr: [mysql_root_password, value] }
-          server_debian_password: { get_attr: [mysql_debian_password, value] }
-          server_repl_password: { get_attr: [mysql_repl_password, value] }
-          bind_address: 127.0.0.1
-        php_app:
+      count: { get_param: node_count }
+      resource_def:
+        type: https://raw.github.com/JasonBoyles/php_app_template/jgb-php-multi/php_app_nodes.yaml
+        properties:
           destination: { get_param: destination }
           deploy_key: { get_param: deploy_key }
           http_port: { get_param: http_port }
@@ -221,18 +175,17 @@ resources:
           packages: { get_param: packages }
           public: { get_param: public }
           repo: { get_param: repo }
-          rev: { get_param: revision }
+          revision: { get_param: revision }
           sslcert: { get_param: sslcert }
           sslkey: { get_param: sslkey }
           sslcacert: { get_param: sslcacert }
           url: { get_param: url }
           varnish: { get_param: varnish }
-        varnish:
-            backend_host: 127.0.0.1
-        run_list: ["recipe[memcached]",
-                   "recipe[rax_php_app]",
-                   "recipe[php-ioncube]",
-                   "recipe[mysql::server]"]
+          ssh_private_key: { get_attr: [ssh_key, private_key] }
+          ssh_keypair_name: { get_param: ssh_keypair_name }
+          server_hostname: { get_param: server_hostname }
+          image: { get_param: image }
+          flavor: { get_param: flavor }
 
 
 outputs:
